tests/parser/valid/expressions/simple.src
fn main() -> int {
    int x = 42;
    return x;
}
