tests/parser/invalid/syntax_errors/missing_operand.src
fn test() -> void {
    int x = 5 + ;
    return;
}